--- a/blocks/card/__picture/card__picture.css
+++ b/blocks/card/__picture/card__picture.css
@@ -1,6 +1,7 @@
 .card__picture {
-  max-width: 282px;
-  height: auto;
+  display: block;
+  width: 282px;
+  height: 282px;
   border-radius: 10px 10px 0 0;
-  background-size: cover;
+  object-fit: cover;
 }
