--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,7 +1,19 @@
 .profile__description {
+  display: block;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  margin: 16px 0 0;
+  margin: 7px 0 0;
+  max-width: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+@media (max-width: 425px) {
+  .profile__description {
+    font-size: 14px;
+    line-height: 17px;
+    margin: 0;
+    max-width: 200px;
+  }
 }
