--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   margin: 0 0 0 30px;
 }
+@media (max-width: 770px) {
+  .profile__info {
+    margin: 0;
+    align-items: center;
+  }
+}
