--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,5 @@
+@import url(../vendor/normalize.css);
+@import url(../fonts/Inter/inter.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/profile/profile.css);
@@ -8,3 +10,4 @@
 @import url(../blocks/add-button/add-button.css);
 @import url(../blocks/edit-button/edit-button.css);
 @import url(../blocks/like-button/like-button.css);
+@import url(../blocks/popup/popup.css);
