--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.like-button {
+.card__like-button {
   display: flex;
   align-self: center;
   width: 21px;
@@ -7,9 +7,9 @@
   padding: 0;
   background-color: transparent;
   border: 0;
-  background-image: url(../../pictures/like.svg);
+  background-image: url(../../../pictures/like.svg);
 }
-.like-button:hover {
+.card__like-button:hover {
   opacity: 0.6;
   transition: linear 0.2s;
   cursor: pointer;
