--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,5 +1,6 @@
 @import url(./__title/card__title.css);
 @import url(./__picture/card__picture.css);
+@import url(./__like-button/card__like-button.css);
 .card {
   display: flex;
   flex-wrap: wrap;
