--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,3 @@
-@import url(./_opened/popup_opened.css);
 @import url(./__close-button/popup__close-button.css);
 @import url(./__content/popup__content.css);
 @import url(./__input/popup__input.css);
@@ -12,5 +11,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   overflow: hidden;
   position: fixed;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
