--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,21 +1,21 @@
-.add-button {
+.profile__add-button {
   display: flex;
   width: 150px;
   height: 50px;
   background-color: black;
   border: white solid 1px;
   margin: 0 0 0 auto;
-  background-image: url(../../pictures/add-icon.svg);
+  background-image: url(../../../pictures/add-icon.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
-.add-button:hover {
+.profile__add-button:hover {
   opacity: 0.6;
   transition: linear 0.2s;
   cursor: pointer;
 }
 @media (max-width: 770px) {
-  .add-button {
+  .profile__add-button {
     width: 282px;
     margin: 36px auto 0;
   }
