--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,21 +1,21 @@
-.edit-button {
+.profile__edit-button {
   display: block;
   align-self: center;
   width: 24px;
   height: 24px;
   margin: 0 0 0 17px;
   background-color: black;
-  background-image: url(../../pictures/Edit-Button.svg);
+  background-image: url(../../../pictures/Edit-Button.svg);
   background-position: center;
   border: 1px solid #ffffff;
 }
-.edit-button:hover {
+.profile__edit-button:hover {
   opacity: 0.6;
   transition: linear 0.2s;
   cursor: pointer;
 }
 @media (max-width: 425px) {
-  .edit-button {
+  .profile__edit-button {
     margin: 0 0 0 10px;
     align-self: baseline;
     width: 18px;
