--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,7 +11,6 @@
   background-color: rgba(0, 0, 0, 0.5);
   overflow: hidden;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
 }
