--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -3,9 +3,15 @@
   position: relative;
   flex-direction: column;
   justify-content: start;
+  align-items: flex-start;
   margin: 195px auto 0;
   max-width: 430px;
   min-height: auto;
   background-color: white;
   border-radius: 10px;
+}
+@media (max-width: 573px) {
+  .popup__content {
+    max-width: 75vw;
+  }
 }
