--- a/blocks/popup/__fieldset/popup__fieldset.css
+++ b/blocks/popup/__fieldset/popup__fieldset.css
@@ -4,5 +4,11 @@
   margin: 0 auto;
   padding: 0 0 48px;
   border: 0;
-  max-width: 360px;
+  min-width: 360px;
+}
+@media (max-width: 573px) {
+  .popup__fieldset {
+    min-width: 83%;
+    padding: 0 0 36px;
+  }
 }
