--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,8 +4,11 @@
 @import url(./__submit-button/popup__submit-button.css);
 @import url(./__title/popup__title.css);
 @import url(./__fieldset/popup__fieldset.css);
+@import url(./__image/popup__image.css);
+@import url(./__img-title/popup__img-title.css);
+@import url(./__img-wrapper/popup__img-wrapper.css);
 .popup {
-  display: none;
+  display: block;
   width: 100%;
   min-height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -13,4 +16,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  transition: visibility 0.3s, opacity 0.3s linear;
+  visibility: hidden;
+  opacity: 0;
 }
