--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,5 @@
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/_for/popup_for_image.css);
+
