--- a/blocks/popup/__fieldset/popup__fieldset.css
+++ b/blocks/popup/__fieldset/popup__fieldset.css
@@ -4,11 +4,12 @@
   margin: 0 auto;
   padding: 0 0 48px;
   border: 0;
-  min-width: 360px;
+  width: 360px;
+  
 }
 @media (max-width: 573px) {
   .popup__fieldset {
-    min-width: 83%;
+    width: 83%;
     padding: 0 0 36px;
   }
 }
