--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -16,7 +16,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  transition: visibility 0.3s, opacity 0.3s linear;
+  transition: visibility 0.4s, opacity 0.3s ease-in;
   visibility: hidden;
   opacity: 0;
 }
