--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 282px;
-  height: auto;
+  height: max-content;
   border-radius: 10px;
   background-color: white;
   position: relative;
