--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,9 +1,11 @@
 .cards {
   display: grid;
   max-width: 882px;
+  min-height: calc(100vh - 479px);
   margin: 0 auto;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 18px;
+  padding: 0;
 }
 @media (max-width: 920px) {
   .cards {
