--- a/blocks/popup/__img-wrapper/popup__img-wrapper.css
+++ b/blocks/popup/__img-wrapper/popup__img-wrapper.css
@@ -1,9 +1,8 @@
 .popup__img-wrapper {
   display: flex;
   flex-direction: column;
-  align-self: center;
   position: relative;
-  margin: 90px auto 0;
+  margin: auto;
   width: fit-content;
   width: -moz-fit-content;
 }
