--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -5,6 +5,7 @@
   height: 50px;
   color: white;
   background-color: black;
+  border-radius: 2px;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
