--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,11 +2,16 @@
 @import url(./__content/popup__content.css);
 @import url(./__input/popup__input.css);
 @import url(./__submit-button/popup__submit-button.css);
+@import url(./__submit-button/_inactive/popup__submit-button_inactive.css);
 @import url(./__title/popup__title.css);
 @import url(./__fieldset/popup__fieldset.css);
 @import url(./__image/popup__image.css);
 @import url(./__img-title/popup__img-title.css);
 @import url(./__img-wrapper/popup__img-wrapper.css);
+@import url(./__input-error-text/popup__input-error-text.css);
+@import url(./__input-error-text/_active/popup__input-error-text_active.css);
+@import url(./__input/_type/popup__input_type_error.css);
+
 .popup {
   display: block;
   width: 100%;
