--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -3,7 +3,7 @@
   align-self: center;
   width: 21px;
   height: 18px;
-  margin: 0 21px 0 auto;
+  margin: auto;
   padding: 0;
   background-color: transparent;
   border: 0;
