--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -5,6 +5,7 @@
 @import url(./__info-shell/profile__info-shell.css);
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__add-button/profile__add-button.css);
+@import url(./__avatar-wrapper/profile__avatar-wrapper.css);
 .profile {
   display: flex;
   max-width: 882px;
