--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -3,7 +3,7 @@
   display: flex;
   max-width: 882px;
   margin: 0 auto;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   padding: 66px 0 60px;
 }
