--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,7 +2,7 @@
   display: flex;
   margin: 0 auto;
   max-width: 882px;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
