--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -2,7 +2,7 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   margin: 195px auto 0;
   max-width: 430px;
