--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -3,6 +3,7 @@
 @import url(./__like-button/card__like-button.css);
 @import url(./__like-button/card__like-button_active.css);
 @import url(./__delete-button/card__delete-button.css);
+@import url(./__delete-button/card__delete-button_hidden.css);
 @import url(./__like-wrapper/card__like-wrapper.css);
 @import url(./__likes-number/card__likes-number.css);
 .card {
