--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,7 +1,7 @@
 .profile__info {
   display: flex;
   flex-direction: column;
-  margin: 0 0 0 30px;
+  margin: 0 20px 0 30px;
 }
 @media (max-width: 770px) {
   .profile__info {
