--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -7,9 +7,11 @@
   min-width: 320px;
   margin: 0 auto;
   padding: 45px 0 0;
+  min-height: calc(100vh - 45px);
 }
 @media (max-width: 425px) {
   .page {
     padding: 28px 0 0;
+    min-height: calc(100vh - 28px);
   }
 }
